--- a/src/app/components/modal/modal-add/modal-add.component.html
+++ b/src/app/components/modal/modal-add/modal-add.component.html
@@ -5,7 +5,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="modal-body">
+    <div *mobxAutorun class="modal-body">
         <form *ngIf="addItemForm" [formGroup]="addItemForm" (ngSubmit)="onSubmitUserDetails($event)">
             <mat-form-field class="full-width">
                 <label>
